Final fixes for allowing the post-image to stretch as far as it can

--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -105,10 +105,6 @@
 
 .post-image {
     @include row();
-
-    img {
-        @include span-columns(9);
-        @include omega();
-        @include fill-parent();
-    }
+    @include span-columns(9);
+    @include omega();
 }
