--- a/src/scss/components/_generic.scss
+++ b/src/scss/components/_generic.scss
@@ -28,6 +28,8 @@ h6 {
 }
 
 body {
+  @include outer-container(100%);
+
   background-color: lighten("container-background", 75);
   color: color("copy");
   font-family: font("body-copy");
